--- a/views/index.html
+++ b/views/index.html
@@ -226,7 +226,7 @@ pre {
               <h2>How to use this example application</h2>
                 <p>For instructions on how to use this application with OpenShift, start by reading the <a href="http://docs.okd.io/latest/dev_guide/templates.html#using-the-quickstart-templates">Developer Guide</a>.</p>
 
-              <h2>Deploying code changes</h2>
+              <h2>Deploying code changess</h2>
                 <p>
                   The source code for this application is available to be forked from the <a href="https://www.github.com/sclorg/nodejs-ex">OpenShift GitHub repository</a>.
                   You can configure a webhook in your repository to make OpenShift automatically start a build whenever you push your code:
